# prod

./: Cargo.toml  README.md  commands.sh  concept.md
migrations/: 20251114081947_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
