[package]
name = "prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.24"
